--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 
 </head>
@@ -134,21 +136,72 @@
             <h1 data-aos="fade-up" data-aos-delay="100">Urbanest</h1>
             <p data-aos="fade-up" data-aos-delay="200">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt</p>
         </div>
-        <!-- <div class="timeline-details">
+        <div class="timeline-details">
 
+            <div class="before-imgs">
+                <div class="fillet-img">
+                    <img src="static/images/timeline1/timeline1.jpg" srcset="static/images/timeline1/timeline1@2x.jpg 2x, static/images/timeline1/timeline1@3x.jpg 3x">
+                </div>
 
-            <li class="hr-solid"></li>
-            <li class="cicle"></li>
-            <div class="v-lines">
-                <li class="vl"></li>
-                <li class="vl"></li>
-                <li class="vl"></li>
-                <li class="vl"></li>
-                <li class="vl"></li>
-            </div> -->
+                <div class="fillet-img">
+                    <img src="static/images/timeline3/timeline3.jpg" srcset="static/images/timeline3/timeline3@2x.jpg 2x, static/images/timeline3/timeline3@3x.jpg 3x">
+                </div>
+            </div>
 
+            <div class="markers">
+                <li class="hr-solid"></li>
+                <div class="v-lines">
+                    <li>
+                        <h3>2017</h3>
+                        <p class="dot"></p>
+                    </li>
+                    <li>
+                        <p class="vl"></p>
+                        <h6>Acquisition</h6>
+                    </li>
+                    <li>
+                        <p class="dot"></p>
+                        <h3>2018</h3>
+                    </li>
+                    <li>
+                        <h6>Concept</h6>
+                        <p class="vl"></p>
+                    </li>
+                    <li>
+                        <h3>2019</h3>
+                        <p class="dot"></p>
+                    </li>
+                    <li>
+                        <p class="vl"></p>
+                        <h6>Design</h6>
+                    </li>
+                    <li>
+                        <h6>Concept</h6>
+                        <p class="vl"></p>
+                    </li>
+                    <li>
+                        <p class="dot"></p>
+                        <h3>2020</h3>
+                    </li>
+                    <li>
+                        <h6>Construction</h6>
+                        <p class="vl"></p>
+                    </li>
 
-            <div class="container" data-aos="fade-up" data-aos-delay="200">
+                </div>
+            </div>
+
+            <div class="after-imgs">
+                <div class="fillet-img">
+                    <img src="static/images/timeline2/timeline2.jpg" srcset="static/images/timeline2/timeline2@2x.jpg 2x, static/images/timeline2/timeline2@3x.jpg 3x">
+                </div>
+
+                <div class="fillet-img">
+                    <img src="static/images/timeline4/timeline4.jpg" srcset="static/images/timeline4/timeline4@2x.jpg 2x, static/images/timeline4/timeline4@3x.jpg 3x">
+                </div>
+            </div>
+
+            <!-- <div class="container" data-aos="fade-up" data-aos-delay="200">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <section class="main-timeline-section">
@@ -218,7 +271,7 @@
                           </section>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
 
 
