--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
         <div class="timeline-details">
 
-            <div class="before-imgs">
+            <div class="before-imgs" data-aos="fade-up" data-aos-delay="250">
                 <div class="fillet-img">
                     <img src="static/images/timeline1/timeline1.jpg" srcset="static/images/timeline1/timeline1@2x.jpg 2x, static/images/timeline1/timeline1@3x.jpg 3x">
                 </div>
@@ -148,7 +148,7 @@
                 </div>
             </div>
 
-            <div class="markers">
+            <div class="markers" data-aos="fade-up" data-aos-delay="300">
                 <li class="hr-solid"></li>
                 <div class="v-lines">
                     <li>
@@ -191,7 +191,7 @@
                 </div>
             </div>
 
-            <div class="after-imgs">
+            <div class="after-imgs" data-aos="fade-up" data-aos-delay="350">
                 <div class="fillet-img">
                     <img src="static/images/timeline2/timeline2.jpg" srcset="static/images/timeline2/timeline2@2x.jpg 2x, static/images/timeline2/timeline2@3x.jpg 3x">
                 </div>
@@ -272,8 +272,6 @@
                     </div>
                 </div>
             </div> -->
-
-
 
         </div>
     </section>
